<resources>
    <string name="app_name">Mrefugee</string>
    <string name="action_settings">Settings</string>
    <string name="action_helpdesk">UpdateHelpDesk</string>
    <string name="action_logout">Logout</string>
    <string name="action_followup">Follow Up</string>
    <string name="welcome">Welcome to Mrefugee</string>


    <!--NAV DRAWER MENU ITEMS-->
    <string name="nav_welcome_msg">About Mrefugee ajgdcdujaschbaskjch a dhxbashxjbjhbjabscjds</string>



    <string name="nav_view_item_5">About App</string>
    <string name="nav_view_item_3">Do Follow Up</string>
    <string name="nav_view_item_4">Send feedback</string>
    <string name="nav_view_item_6">Register</string>
    <string name="nav_view_item_7">Change Password</string>


    <string name="nav_view_category_2">Second Category</string>



    <string name="action_addcamp"> Add Camp</string>
    <string name="updatenoticeboard"> Update Notice Board</string>
    <string name="updatenews"> Update News</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--REGISTER-->
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>


    <!-- ADD NOTICE BORD OPPORTUNITIES-->
    <string name="hint_noticebody">Add Description</string>
    <string name="hint_noticehead"> Add Heading</string>
    <string name="hint_noticeorg">Organization</string>
    <string name="notice_read_more"><u>Read More</u></string>


    <!-- ADD REPATRIATION DATA-->
    <string name="hint_RepStagesInvolved">Brief Intro Info of repatriation</string>
    <string name="hint_RepCountryInfo"> Add Heading</string>
    <string name="hint_RepWelcomeMsg">Organization</string>


    <!-- ADD NEWS-->
    <string name="hint_newsbody">News Description</string>
    <string name="hint_newshead">News Head</string>
    <string name="hint_newsorg">Organization</string>
    <string name="read_more"><u>Read More</u></string>

    <!--Bullet points-->


    <string name="text_with_bullet">Text with a \u25BA</string>
</resources>
