<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_view_item_1" />
        <item
            android:id="@+id/navigation_item_6"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_view_item_6" />
        <item
            android:id="@+id/navigation_item_7"
            android:checked="true"
            android:icon="@drawable/ic_launcher"
            android:title="@string/nav_view_item_7" />
    </group>

    <item
        android:id="@+id/nav_view_category_2"
        android:title="@string/nav_view_category_2">
        <menu>
            <item
                android:id="@+id/navigation_item_3"
                android:icon="@drawable/ic_launcher"
                android:title="@string/nav_view_item_3" />
            <item
                android:id="@+id/navigation_item_4"
                android:icon="@drawable/ic_launcher"
                android:title="@string/nav_view_item_4" />

            <item
                android:id="@+id/navigation_item_5"
                android:icon="@drawable/ic_launcher"
                android:title="@string/nav_view_item_5" />

            <item
                android:id="@+id/navigation_item_8"
                android:icon="@drawable/ic_launcher"
                android:title="@string/updatenews" />

            <item
                android:id="@+id/nv_updatenoticeboard"
                android:icon="@drawable/ic_launcher"
                android:title="@string/updatenoticeboard" />



        </menu>
    </item>

</menu>