<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.crakama.refugee.Activities.MainActivity">
    <item
        android:id="@+id/action_followup"
        android:orderInCategory="50"
        android:title="@string/action_followup"
        android:icon="@mipmap/ic_medic"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/action_addcamp"
        android:orderInCategory="102"
        android:title="@string/action_addcamp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="104"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="103"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>

