<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/lightgrey"
    android:fitsSystemWindows="true"
    tools:context="com.crakama.refugee.Activities.UpdateNoticeBoard">

    <!--<ProgressBar-->
    <!--android:id="@+id/progressBar"-->
    <!--android:layout_width="30dp"-->
    <!--android:layout_height="30dp"-->
    <!--android:layout_gravity="center|bottom"-->
    <!--android:layout_marginBottom="20dp"-->
    <!--android:visibility="gone" />-->

    <include layout="@layout/fragment_notice_rv"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNoticeHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hint_noticehead"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:minLines="1"
                android:maxLines="1"
                android:selectAllOnFocus="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNoticeBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:minLines="2"
                android:maxLines="5"
                android:hint="@string/hint_noticebody"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:selectAllOnFocus="true" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtnoticeorganization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:minLines="2"
                android:maxLines="5"
                android:hint="@string/hint_newsorg"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:selectAllOnFocus="true" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_add_notice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/colorBlue"
            android:text="Add"
            android:textColor="@android:color/black" />



    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
